# transparency-nepal-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/: seed_pmis.surql
src/: error.rs  main.rs  state.rs
src/api/: projects.rs
src/common/: auth.rs
src/config/: env.rs  mod.rs  providers.rs
src/core/: mod.rs  notifications.rs  state.rs
src/core/config/: cache.rs  database.rs  env.rs  mod.rs
src/core/providers/: mod.rs
src/features/: mod.rs
src/features/auth/: controller.rs  mod.rs  model.rs  repo.rs  routes.rs  service.rs
src/features/contributions/: controller.rs  mod.rs  model.rs  repo.rs  routes.rs  service.rs
src/features/donations/: controller.rs  model.rs  repo.rs  routes.rs  service.rs
src/features/projects/: controller.rs  mod.rs  model.rs  repo.rs  routes.rs  service.rs
src/features/ws/: controller.rs  mod.rs  routes.rs
src/shared/: auth.rs  mod.rs  utils.rs
src/shared/providers/: email.rs  fcm.rs  mod.rs  sms.rs  whatsapp.rs
